@@ -22,6 +22,8 @@ v0.9 - 2016-05-XX
 	- New option for maximum epicentral distance for trace processing
 	- Use json format for traceid correction file
 	- Save config file to output dir (only for source_spec)
+	- Logarithmic average and logarithmic (asymmetric) error bars for Mo, fc
+		and source radius
 	- Code cleaning and optimization:
 		- Switch from optparse (deprecated) to argparse
 		- Code style fixes and refactoring
